# soil-N-P-K-sensor

./: README.md
SoilAI/: CMakeLists.txt  README.md
SoilAI/include/ai/: AIEngine.h
SoilAI/include/core/: User.h
SoilAI/include/db/: DatabaseManager.h
SoilAI/include/sensors/: Sensor.h  SensorSimulator.h  SerialPortManager.h
SoilAI/include/ui/: Dashboard.h  GaugeWidget.h  LoginWindow.h  MainWindow.h
SoilAI/src/: main.cpp
SoilAI/src/ai/: AIEngine.cpp
SoilAI/src/db/: DatabaseManager.cpp
SoilAI/src/sensors/: SensorSimulator.cpp  SerialPortManager.cpp
SoilAI/src/ui/: Dashboard.cpp  GaugeWidget.cpp  LoginWindow.cpp  MainWindow.cpp
